--- a/contact-form.html
+++ b/contact-form.html
@@ -52,7 +52,7 @@
             </div>
             
             <!--the form-->
-            <form id="feedbackForm" method="POST" class="contact-form">
+            <form id="feedbackForm" method="POST" action="contact.php" class="contact-form">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required>
